--- a/index.html
+++ b/index.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header"></div>
 
+    <div class="iop">
+      <nav class="nav-bar">
+        <h1 class="log">Logo</h1>
+        <ul class="fop">
+          <li class="gop">Home</li>
+          <li class="gop">About</li>
+          <li class="gop">Contact</li>
+        </ul>
+      </nav>
 
+      <div class="center">
+        <div class="heading">
+          <h1 class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing.
+          </h1>
+          <p class="text2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            perspiciatis quam unde eius dolorem, cum doloremque error.
+            Asperiores, saepe assumenda quis.
+          </p>
+          <button class="btn1">Learn More</button>
+        </div>
+        <div class="cnet">
+          <div class="cover">
+            <img class="ritu" src="./images/Hyperspace Spaceship 6.png" />
+          </div>
+        </div>
+      </div>
+    </div>
 
-
-
-
-
-
-
-
-
-
-<script>
-    function rain (){
-        let amount =200;
-        let body = document.querySelector('body');
+    <script>
+      function rain() {
+        let amount = 200;
+        let body = document.querySelector(".header");
         let i = 0;
-        while(i < amount){
-            let drop = document.createElement('i');
+        while (i < amount) {
+          let drop = document.createElement("i");
 
-            let size = Math.random()* 5;
-            let posX = Math.floor(Math.random()* window.innerWidth);
-            let delay = Math.random() * -20;
-            let duration = Math.random() * 10;
+          let size = Math.random() * 5;
+          let posX = Math.floor(Math.random() * window.innerWidth);
+          let delay = Math.random() * -20;
+          let duration = Math.random() * 10;
 
-
-
-
-            drop.style.width = 0.2 + size +'px';
-            drop.style.left = posX + 'px';
-            drop.style.animationDelay = delay + 's';
-            drop.style.animationDuration = 1 + duration + 's';
-            body.appendChild(drop);
-            i++
+          drop.style.width = 0.2 + size + "px";
+          drop.style.left = posX + "px";
+          drop.style.animationDelay = delay + "s";
+          drop.style.animationDuration = 1 + duration + "s";
+          body.appendChild(drop);
+          i++;
         }
-    }
+      }
 
-    rain();
-</script>
-
-
-</body>
+      rain();
+    </script>
+  </body>
 </html>
